# stock-yfinance

./: Makefile  README.md  pyproject.toml
app/: Home.py  main.py
app/component/: app.py  pages.py  sidebar.py  stock.py  stock_infomation.py  textbox.py
app/models/: models.py
app/pages/: Stock.py  home.py
