[tool.poetry]
name = "stock-yfinance"
version = "0.1.0"
description = ""
authors = ["ohmmaagoch <ohm@42bangkok.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
yfinance = "^0.2.36"
streamlit = "^1.31.1"
vega-datasets = "^0.9.0"
pydantic = "^2.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
